# parconc

./: .gitignore  Makefile  Readme.org  parconc.cabal  stack.yaml
app/: .dir-locals.el  Main.hs  chat.hs  findpar.hs  findpar2.hs  findpar3.hs  findpar4.hs  findseq.hs  fork.hs  geturls1.hs  geturls2.hs  geturls3.hs  geturls5.hs  geturls6.hs  geturls7.hs  geturls8.hs  geturls9.hs  geturlscancel.hs  geturlsfirst.hs  log.txt  logger.hs  parmonad.hs  reminders.hs  rsa.hs  server2.hs  simpleserver.hs  strat.hs  sudoku1.hs  sudoku2.hs  sudoku3.hs
src/: Async.hs  AsyncEx.hs  AsyncSTM.hs  DistribUtils.hs  ParStream.hs  RepaEx.hs  Sudoku.hs  WindowManager.hs
