name:                parconc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/parconc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sudoku
                     , ParStream
                     , RepaEx
                     , GetURL
                     , Async
                     , AsyncEx
                     , AsyncSTM
                     , TimeIt
                     , WindowManager
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , HTTP
                     , network-uri >= 2.6
                     , monad-par
                     , repa
                     , deepseq >= 1.4
                     , stm >= 2.4
                     , time
                     , vector >= 0.11
  default-language:    Haskell2010

executable rpar
  hs-source-dirs:      app
  main-is:             rpar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parconc
                     , parallel
                     , time >= 1.5
  default-language:    Haskell2010

executable sudoku1
  hs-source-dirs:      app
  main-is:             sudoku1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parconc
                     , parallel
                     , time >= 1.5
  default-language:    Haskell2010

executable sudoku2
  hs-source-dirs:      app
  main-is:             sudoku2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable sudoku3
  hs-source-dirs:      app
  main-is:             sudoku3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable strat
  hs-source-dirs:      app
  main-is:             strat.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable parmonad
  hs-source-dirs:      app
  main-is:             parmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -eventlog
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , monad-par
                     , time >= 1.5
  default-language:    Haskell2010

executable fwdense
  hs-source-dirs:      app
  main-is:             fwdense.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , repa
                     , monad-par
                     , time >= 1.5
  default-language:    Haskell2010

executable fwdense1
  hs-source-dirs:      app
  main-is:             fwdense1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , deepseq >= 1.4
                     , parallel
                     , parconc
                     , repa
                     , monad-par
                     , time >= 1.5
  default-language:    Haskell2010

-- executable rotateimage
--   hs-source-dirs:      app
--   main-is:             rotateimage.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--   build-depends:       base
--                      , deepseq >= 1.4
--                      , parallel
--                      , parconc
--                      , repa
--                      , repa-devil
--                      , monad-par
--                      , time >= 1.5
--   default-language:    Haskell2010

executable fork
  hs-source-dirs:      app
  main-is:             fork.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable reminders
  hs-source-dirs:      app
  main-is:             reminders.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable logger
  hs-source-dirs:      app
  main-is:             logger.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable geturlscancel
  hs-source-dirs:      app
  main-is:             geturlscancel.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable geturlsfirst
  hs-source-dirs:      app
  main-is:             geturlsfirst.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , parconc
                     , time >= 1.5
  default-language:    Haskell2010

executable simpleserver
  hs-source-dirs:      app
  main-is:             simpleserver.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , parconc
                     , network >= 2.6
                     , time >= 1.5
                     , text
  default-language:    Haskell2010

executable server2
  hs-source-dirs:      app
  main-is:             server2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , parconc
                     , network >= 2.6
                     , stm >= 2.4
                     , time >= 1.5
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/parconc
